--- a/ISHP/data/dashboard.html
+++ b/ISHP/data/dashboard.html
@@ -11,7 +11,7 @@ This page will display the values needed for the Indigenous Smart House Project.
 
 It is planned that this page will show:
 <ul>
-    <li>Moisture Level: </li>
+    <li>Moisture Level:  %MOISTURE% </li>
     <li>Date and Time: </li>
     <li>Temperature: </li>
     <li>Motor/Pump Status: </li>
