--- a/ISHP/data/dashboard.html
+++ b/ISHP/data/dashboard.html
@@ -6,7 +6,7 @@
   display: grid;
   grid-template-columns: auto auto;
   grid-gap: 10px;
-  background-color: #2196F3;
+  background-color: #40b973;
   padding: 10px;
 }
 
